[package]
name = "dm-server"
version = "0.1.0"
authors = ["Bartłomiej Kuras <bartlomiej.kuras@o2.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "net", "tcp", "macros", "stream"] }
tokio-util = { version = "0.3", features = ["codec"] }
futures = "0.3"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
rmp-serde = "0.14"
bytes = "0.5"
